<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CustomDialogActivity!</string>
    <string name="app_name">CustomDialog</string>
    
    
        <!-- Content description for the Toolbar icon used to collapse an expanded action mode. [CHAR LIMIT=NONE] -->
	<!-- kongtianhao add 20150727 for shorcutbar test begin -->
    <string name="test_wifi_str">WLAN</string>
    <string name="test_data_conection_str">Data connection</string>
    <string name="test_airplane_str">Airplane mode</string>
    <string name="test_flashlight_str">Flashlight</string>
    <string name="test_bluetooth_str">Bluetooth</string>
    <string name="test_location_str">Location</string>
    <string name="test_cast_str">Cast screen</string>
    <string name="test_inversion_str">Inversion</string>
    <string name="test_hotspot_str">Hotspot</string>
    <string name="test_rotation_str">Rotation</string>
    <string name="test_meeting_str">Meeting</string>
    <string name="test_turbokey_str">TurboKey</string>	
	<string name="no_runningapp_str">there is no running APP in backstage</string>	
	<!-- Content description of the display brightness slider (not shown on the screen). [CHAR LIMIT=NONE] -->    
	<string name="accessibility_brightness_str">Display shortcut bar brightness</string>
	<!-- kongtianhao add 20150727 for shorcutbar test end -->

</resources>