<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homelong_dialog_test"
    android:layout_width="fill_parent"
    android:layout_height="270dp"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="4dip"
        android:orientation="horizontal" >
    </LinearLayout> 

    <LinearLayout
        android:id="@+id/shortcut_bar_dialog_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/no_runningapp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center" >

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center" >

                    <GridView
                        android:id="@+id/recentapp_container_recyclerview"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:numColumns="auto_fit"
                        android:paddingTop="2dp"
                        android:stretchMode="columnWidth" >
                    </GridView>
                </FrameLayout>
            </HorizontalScrollView>
        </FrameLayout>

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:elevation="12dip"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:visibility="visible" >

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_turbokey"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_white" />

                    <TextView
                        android:id="@+id/tv_turbokey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_turbokey_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_wifi"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_wifi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_wifi_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_cellular"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_cellular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_data_conection_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_meeting"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_meeting_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_flashlight"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_flashlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_flashlight_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_bluetooth"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_bluetooth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_bluetooth_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_location"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_location_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_airplane"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_airplane"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_airplane_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_rotation"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_rotation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_rotation_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/iv_cast"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_cast_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/iv_inversion"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_inversion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_inversion_str"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/iv_hotspot"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_qs_turbokey_rocket_blue" />

                    <TextView
                        android:id="@+id/tv_hotspot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test_hotspot_str"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>